--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,20 @@
 body {
-    background-color: #07021f;
+    background-color: #033658da;
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
     margin: 0;
+   
 }
 
 .container {
     text-align: center;
     padding: 20px;
-    border-radius: 50px;
+    border-radius: 20px; 
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    opacity: 1; 
 }
 
 h1 {
@@ -29,24 +31,29 @@ h1 {
 .descricao {
     font-size: 18px;
     color: #ffffff;
-    margin-bottom: 20px;
-    font-size: 18px;
+    margin-bottom: 18px;
 }
+
 h2 {
     font-size: 16px;
-    color: #555;
+    color: #ffffff;
     line-height: 1.5;
-    margin-top: 20px;
+    margin-top: 15px;
     padding: 0 10px;
-    text-align: left;
-    border-top: 1px solid #ddd;
+    text-align: center;
+    border-top: 1px solid #ffffff;
     padding-top: 20px;
-    width: 50%; /* Define a largura como 50% do container */
-    margin: 0 auto; /* Centraliza o h2 dentro do container */
-    text-align: center; /* Centraliza o texto */
+    width: 50%;
+    margin: 0 auto;
+}
+.coração {
+    width: 40px;
+    height: 40px;
+    margin-bottom: 20px;
+    
 }
 
 .tempo {
-    font-size: 24px;
-    color: #FF5733;
+    font-size: 20px;
+    color: #ffffff;
 }
